style(order): fix OrderInfo layout on small screens

--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,13 @@
   background-color: rgb(88, 88, 88);
   padding: 4px;
 }
+.active-sidebar-item {
+  background: #6faafd;
+  color: white;
+  border-radius: 24px;
+  border-end-end-radius: 18px;
+  border-start-end-radius: 18px;
+}
 /* grid area */
 .layout-dashboard {
   grid-template-areas:
